# DFD-Sim

./: CMakeLists.txt  README.md
include/: backgroundscreen.h  curve.h  curveeditorscreen.h  dfdscreen.h  metadata.h  screen.h  screenhandler.h  window.h
src/: backgroundscreen.cpp  curve.cpp  curveeditorscreen.cpp  dfdscreen.cpp  main.cpp  screen.cpp  screenhandler.cpp
